tests/NormalTests/paczka2/big_fuzzy/99887658.err
Error in line 8: A494 A849 96,9
Error in line 10: MtWk36ocyqd S438 29,5
Error in line 13: MtWk36ocyqd A849 43,9
Error in line 16: A494 S438 50,9
Error in line 17: A494 S385 94,6
Error in line 20: 15I7KFO41l S385 38,9
Error in line 23: 15I7KFO41l A849 91,9
Error in line 15: MtWk36ocyqd A494 80,2
Error in line 33: AcvjXKonqLx S385 51,2
Error in line 39: 15I7KFO41l S438 62,3
Error in line 46: 15I7KFO41l A494 12,9
Error in line 41: kz2ko99B A849 23,2
Error in line 47: AcvjXKonqLx A494 108,3
Error in line 60: AcvjXKonqLx S385 21,7
Error in line 72: kz2ko99B A849 195,1
Error in line 73: AcvjXKonqLx A849 30,0
Error in line 56: 15I7KFO41l S385 76,6
Error in line 75: XNcFwPP6X S385 54,0
Error in line 80: AcvjXKonqLx A494 5,2
Error in line 93: AcvjXKonqLx S438 81,7
Error in line 106: kz2ko99B S438 6,9
Error in line 104: MtWk36ocyqd S438 3,0
Error in line 113: kz2ko99B A494 174,5
Error in line 124: kz2ko99B S438 64,2
Error in line 128: qTuc2 S438 54,6
Error in line 136: A494 S385 15,8
Error in line 148: A494 A849 44,3
Error in line 140: AcvjXKonqLx S438 66,9
Error in line 167: MtWk36ocyqd S385 0,5
Error in line 185: 15I7KFO41l S385 141,0
Error in line 188: 15I7KFO41l S438 92,7
Error in line 178: AcvjXKonqLx S385 17,8
Error in line 153: XNcFwPP6X A849 174,9
Error in line 192: AcvjXKonqLx A494 80,0
Error in line 201: qTuc2 S385 90,8
Error in line 202: qTuc2 A494 81,3
Error in line 203: AcvjXKonqLx A494 65,7
Error in line 204: kz2ko99B S385 82,8
Error in line 210: AcvjXKonqLx S385 45,8
Error in line 206: qTuc2 S385 37,0
Error in line 225: kz2ko99B S385 28,7
Error in line 222: A494 S385 13,3
Error in line 238: kz2ko99B S385 6,30
Error in line 229: kz2ko99B A849 13,1
Error in line 239: kz2ko99B S385 23,6
